--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Notes Simplified | NoteGlow.com{% endblock title %}</title>
     <link rel="stylesheet" href="{% static '/theme.css' %}">
+    <link rel="stylesheet" href="{% static '/css/base.css' %}">
     <script src="{% static 'htmx.js' %}"></script>
 </head>
 <body>
