--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,7 +2,6 @@
 -------------------------------------------------- */
 html {
   position: relative;
-  min-height: 100%;
   font-size: 14px;
 }
 @media (min-width: 768px) {
@@ -11,8 +10,37 @@ html {
   }
 }
 
+/* body {
+  margin-bottom: 60px; /* Margin bottom by footer height
+} */
+
+html, body {
+  height: 100%;
+}
+
 body {
-  margin-bottom: 60px; /* Margin bottom by footer height */
+  margin: 0;
+  padding: 6rem 0 0;
+  max-width: 100%;
+}
+
+#main {
+  max-width: 50rem;
+  margin: 0 auto;
+  height: 100%;
+}
+
+.full-section {
+  height: 100%;
+  margin: 0;
+}
+
+.edit-form {
+  height: calc(100% - 30px);
+}
+
+textarea.edit-textarea {
+  height: calc(100% - 70px);
 }
 
 .container {
@@ -30,4 +58,12 @@ body {
   height: 60px; /* Set the fixed height of the footer here */
   line-height: 60px; /* Vertically center the text there */
   background-color: #f5f5f5;
+}
+
+h1,h2,h3,h4,h5 {
+  margin: 0 0 15px;
+}
+
+section {
+  margin: 0;
 }
