--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}About NoteGlow | NoteGlow.com{% endblock %}
 {% block content %}
-    <main>
+    <main id="main">
 	<div>
 		<h1>My Notes</h1>
 	</div>
