--- a/templates/details.html
+++ b/templates/details.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}{{ note.name }} | NoteGlow.com{% endblock %}
 {% block content %}
-    <main>
+    <main id="main">
 	<section hx-trigger="click" readonly hx-post="/lock/{{ note.pid }}" hx-target="section" hx-swap="outerHTML" >
 		<div>Click to edit</div>
 		<div style="background-color: rgb(255, 255, 255, 0.05);padding: 10px;">{{ body|safe }}</div>
