--- a/templates/editor.html
+++ b/templates/editor.html
@@ -1,4 +1,4 @@
-<section>
+<section class="full-section">
 	<div id="lock-status" hx-get="/renew_lock/{{ note.pid }}" hx-trigger="every 10s" hx-swap="innerHTML" hx-vals='{"lock_id": "it"}'>
 	Locked.. only you can edit this note.
 </div>
@@ -7,11 +7,10 @@
 	hx-swap="outerHTML"
 	hx-encoding="multipart/form-data"
 	id="note-form"
+    class="edit-form"
 >
 <textarea
-	style="width: 100%;
-            height: 100%; /* Fills the remaining space */
-            box-sizing: border-box;
+	style="
             resize: none; /* Optional: Disable resizing */
             font-size: 16px;
             padding: 10px;
@@ -20,9 +19,10 @@
 	autofocus
 	id="body"
 	name="body"
-	required>{{ note.body }}</textarea>
+	required
+    class="edit-textarea">{{ note.body }}</textarea>
 
-<input type="submit" value="Save"/>
+<input style="display: inline;" type="submit" value="Save"/>
 <a href="/notes/{{ note.pid }}">Cancel</a>
 </form>
 <script>
