about and favicon

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,26 @@
 {% block content %}
     <main id="main">
 	<div>
-		<h1>My Notes</h1>
+		<h1>About NoteGlow</h1>
+		<h2>Why is sharing notes so hard and slow?</h2>
+		<p>
+			That’s the question I kept asking myself, so I decided to do something about it.
+			Introducing NoteGlow—a no-frills, simple note-sharing tool designed to help you stay productive without the hassle.
+		</p>
+
+		<h2>Pricing?</h2>
+		<p>
+			Free! And it will stay free for the features you use today.
+			I do have some advanced features in mind that might cost more to host, but those are for another day when I can take a break from my consultancy work.
+			Oh, and if you’re into self-hosting, you’re welcome to grab a copy at GitHub and host NoteGlow yourself—free forever.
+		</p>
+
+		<h2>Join the Community</h2>
+		<p>
+			NoteGlow is simple, and I intend to keep it that way. But that’s what makes it the perfect place to contribute! The first version was built in less than 5 hours and is easy to understand and update. Whether you’re fixing bugs, suggesting features, or improving the docs, your help can make NoteGlow even better. Let’s build something great together!
+			<a href="https://github.com/MartinBaunWorld/NoteGlow">NoteGlow on Github</a>
+		</p>
+
 	</div>
     </main>
 {% endblock %}
