--- a/templates/base.html
+++ b/templates/base.html
@@ -2,12 +2,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Notes Simplified | NoteGlow.com{% endblock title %}</title>
-    <link rel="stylesheet" href="{% static '/theme.css' %}">
-    <link rel="stylesheet" href="{% static '/css/base.css' %}">
-    <script src="{% static 'htmx.js' %}"></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>{% block title %}Notes Simplified | NoteGlow.com{% endblock title %}</title>
+	<link rel="stylesheet" href="{% static '/theme.css' %}">
+	<link rel="stylesheet" href="{% static '/css/base.css' %}">
+	<script src="{% static 'htmx.js' %}"></script>
+	<link rel="icon" type="image/png" href="{% static '/fav/favicon-96x96.png' %}" sizes="96x96" />
+	<link rel="icon" type="image/svg+xml" href="{% static '/fav/favicon.svg' %}" />
+	<link rel="shortcut icon" href="{% static '/fav/favicon.ico' %}" />
+	<link rel="apple-touch-icon" sizes="180x180" href="{% static '/fav/apple-touch-icon.png' %}" />
+	<meta name="apple-mobile-web-app-title" content="NoteGlow" />
+	<link rel="manifest" href="{% static '/fav/site.webmanifest' %}" />
+
 </head>
 <body>
     {% include 'nav.html' %}
