--- a/templates/editor.html
+++ b/templates/editor.html
@@ -3,7 +3,7 @@
 	Locked.. only you can edit this note.
 </div>
 <form 
-	hx-post="/notes/{{ note.pid }}/"
+	hx-post="/note_edit/{{ note.pid }}/"
 	hx-swap="outerHTML"
 	hx-encoding="multipart/form-data"
 	id="note-form"
