--- a/templates/about.html
+++ b/templates/about.html
@@ -23,6 +23,11 @@
 			<a href="https://github.com/MartinBaunWorld/NoteGlow">NoteGlow on Github</a>
 		</p>
 
+		<h2>Who Am I?</h2>
+		<p>
+			I run a software consultancy where we specialize in building websites and apps for clients. We’re a small but efficient team that handles everything, so our clients can focus on growing their business.
+			NoteGlow started as a small project to help my team share notes quickly and efficiently. If you’re interested in having awesome software built, check us out at <a href="https://baunit.com.">BaunIT.com</a>
+		</p>
 	</div>
     </main>
 {% endblock %}
