--- a/templates/about.html
+++ b/templates/about.html
@@ -6,18 +6,29 @@
 		<h1>About NoteGlow</h1>
 		<h2>Why is sharing notes so hard and slow?</h2>
 		<p>
-			That’s the question I kept asking myself, so I decided to do something about it.
-			Introducing NoteGlow—a no-frills, simple note-sharing tool designed to help you stay productive without the hassle.
+            It doesn't have to be, so I made. Yet. Another. Note App.
+			NoteGlow is simple note-sharing tool designed to help you stay productive without the hassle.
 		</p>
 
-		<h2>Pricing?</h2>
+		<h2>Pricing? Free?</h2>
 		<p>
 			Free! And it will stay free for the features you use today.
 			I do have some advanced features in mind that might cost more to host, but those are for another day when I can take a break from my consultancy work.
-			Oh, and if you’re into self-hosting, you’re welcome to grab a copy at GitHub and host NoteGlow yourself—free forever.
+            Oh, and if you’re into self-hosting, you’re welcome to grab a copy at <a href="https://github.com/MartinBaunWorld/NoteGlow">GitHub</a> and host NoteGlow yourself—free forever.
+            <a href="https://buy.stripe.com/14k7vy9bz5yR0SYdR9">If you love NoteGlow already, please support and you'll get Premium lifetime as soon as it is built</a> 
 		</p>
 
-		<h2>Join the Community</h2>
+        <h2>What's it made with?</h2>
+
+        Lots of OSS, but kept simple Honorable mentions:
+
+        <ul>
+            <li><a href="https://www.djangoproject.com/">Django</a> is used for a base</li>
+            <li><a href="https://github.com/keepworking/nash/blob/main/nash.html">Nash</a> is an insanely simple WYSIWYG that has been customized for this project</li>
+            <li><a href="https://Ubuntu.com">Ubuntu</a> is loved and hated by the OSS community, but is so nice and easy to work with and this is what is running NoteGlow.com</li>
+        </ul>
+
+		<h2>FORK ME or help a little</h2>
 		<p>
 			NoteGlow is simple, and I intend to keep it that way. But that’s what makes it the perfect place to contribute! The first version was built in less than 5 hours and is easy to understand and update. Whether you’re fixing bugs, suggesting features, or improving the docs, your help can make NoteGlow even better. Let’s build something great together!
 			<a href="https://github.com/MartinBaunWorld/NoteGlow">NoteGlow on Github</a>
@@ -25,8 +36,10 @@
 
 		<h2>Who Am I?</h2>
 		<p>
-			I run a software consultancy where we specialize in building websites and apps for clients. We’re a small but efficient team that handles everything, so our clients can focus on growing their business.
-			NoteGlow started as a small project to help my team share notes quickly and efficiently. If you’re interested in having awesome software built, check us out at <a href="https://baunit.com.">BaunIT.com</a>
+			I run a software consultancy where we specialize in building websites and apps for clients.
+            We’re a small but efficient team that handles everything, so our clients can focus on growing their business.
+			NoteGlow started as a small project to help my team share notes quickly and efficiently.
+            If you’re interested in having awesome software built, check us out at <a href="https://baunit.com">BaunIT.com consultancy house</a>
 		</p>
 	</div>
     </main>
