--- a/templates/base.html
+++ b/templates/base.html
@@ -14,11 +14,12 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="{% static '/fav/apple-touch-icon.png' %}" />
 	<meta name="apple-mobile-web-app-title" content="NoteGlow" />
 	<link rel="manifest" href="{% static '/fav/site.webmanifest' %}" />
-
+	{% block styles %}{% endblock %}
 </head>
 <body>
     {% include 'nav.html' %}
     {% block content %}
     {% endblock content %}
 </body>
+{% block scripts %}{% endblock %}
 </html>
