--- a/templates/editor.html
+++ b/templates/editor.html
@@ -299,9 +299,9 @@
 <main id="main">
     <div class="editor-container">
         <div id="toolbar" class="no-print">
-            <button onclick="changeBlock('h1')">XL</button>
-            <button onclick="changeBlock('h2')">L</button>
-            <button onclick="changeBlock('p')">M</button>
+            <button onclick="changeBlock('h1')">H1</button>
+            <button onclick="changeBlock('h2')">H2</button>
+            <button onclick="changeBlock('p')">P</button>
             <button onclick="changeBlock('small')">S</button>
 
             <button onclick="applyFormat('strong')"><b>B</b></button>
