--- a/templates/about.html
+++ b/templates/about.html
@@ -24,7 +24,7 @@
 
         <ul>
             <li><a href="https://www.djangoproject.com/">Django</a> is used for a base</li>
-            <li><a href="https://github.com/keepworking/nash/blob/main/nash.html">Nash</a> is an insanely simple WYSIWYG that has been customized for this project</li>
+            <li><a href="https://github.com/keepworking/nash/blob/main/nash.html">Nash</a> is an insanely simple WYSIWYG that has been customized for this project. I never thought I would enjoy integrating an WYSIWYG editor, but Nash is just so simple and nice.</li>
             <li><a href="https://Ubuntu.com">Ubuntu</a> is loved and hated by the OSS community, but is so nice and easy to work with and this is what is running NoteGlow.com</li>
         </ul>
 
