--- a/templates/details.html
+++ b/templates/details.html
@@ -6,7 +6,7 @@
         <form method="POST" action="/lock/{{ note.pid }}">
             <input type="submit" value="Edit"/>
         </form>
-		<div style="background-color: rgb(255, 255, 255, 0.05);padding: 10px;">{{ body|safe }}</div>
+		<div style="background-color: rgb(255, 255, 255, 0.05);padding: 10px;">{{ note.body|safe }}</div>
         </section>
     </main>
 {% endblock %}
