--- a/static/css/base.css
+++ b/static/css/base.css
@@ -83,3 +83,16 @@ section {
 .renew-warn p {
   margin: 0;
 }
+
+.card {
+  background-color: rgb(255, 255, 255, 0.05);
+  padding: 30px;
+  border-radius: 12px;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+}
+
+input[type="submit"],
+button[type="submit"] {
+  padding: 12px 20px;
+  min-width: 100px;
+}
