--- a/templates/editor.html
+++ b/templates/editor.html
@@ -299,7 +299,7 @@
 {% block content %}
 <main id="main">
     <div class="toolbar-nav">
-        <form method="POST" action="/notes/{{ note.pid }}">
+        <form method="POST" action="/notes/{{ note.pid }}/">
             <input type="submit" value="Go back"/>
         </form>
         <div id="toolbar" class="no-print">
