--- a/templates/editor.html
+++ b/templates/editor.html
@@ -300,7 +300,7 @@
 <main id="main">
     <div class="toolbar-nav">
         <form method="POST" action="/notes/{{ note.pid }}/">
-            <input type="submit" value="Go back"/>
+            <input type="submit" value="View"/>
         </form>
         <div id="toolbar" class="no-print">
             <div class="tools">
